--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@ header {
   border: solid 2px;
 }
 
+button,
+.logo > img {
+  cursor: pointer;
+}
+
 .logo > img {
   height: 30px;
 }
@@ -17,4 +22,10 @@ header {
 .log-button {
   display: flex;
   justify-content: space-between;
+}
+
+.item > img {
+  border: solid 2px lightblue;
+  height: 460px;
+  width: 230px;
 }
