--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,46 @@ button,
   justify-content: space-between;
 }
 
-.item > img {
+.item img {
   border: solid 2px lightblue;
-  height: 460px;
+  height: 260px;
   width: 230px;
+}
+
+.item {
+  border: solid 3px blue;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.item-img {
+  display: flex;
+}
+
+/* Offer page -> CSS to be splitted */
+
+.offer-wrapper {
+  background-color: #eaedef;
+  display: flex;
+  justify-content: space-around;
+}
+
+.offer-img {
+  height: 260px;
+  width: 220px;
+}
+
+.offer-avatar {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.offer-avatar img {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
 }
